<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LivingRoom"
    android:background="@drawable/kitchen">

    <LinearLayout
        android:id="@+id/linerlayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_gost"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/text_gost"
            android:textColor="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/progress_gost2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"></ProgressBar>

        <TextView
            android:id="@+id/text_food"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/text_food"
            android:textColor="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/progress_food2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"></ProgressBar>

        <TextView
            android:id="@+id/text_wash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_wash"
            android:textColor="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/progress_wash2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"></ProgressBar>

        <TextView
            android:id="@+id/text_sleep"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/text_sleep"
            android:textColor="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/progress_sleep2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <Button
        android:id="@+id/eating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linerlayout2"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:text="@string/food"
        android:background="@android:color/holo_blue_light"/>

    <LinearLayout
        android:id="@+id/linerlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/livingroom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/but_gost" />

        <ImageButton
            android:id="@+id/kitchen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/but_kitch" />

        <ImageButton
            android:id="@+id/bathroom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/but_bath" />

        <ImageButton
            android:id="@+id/bedroom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/but_bed" />
    </LinearLayout>

    <ImageView
        android:id="@+id/chincha2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/linerlayout2"
        android:layout_centerVertical="true"
        android:layout_marginBottom="-48dp"
        app:srcCompat="@drawable/chinchilla" />

    <ImageView
        android:id="@+id/chincha_hungry"
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:layout_above="@id/eating"
        android:layout_centerInParent="true"
        android:alpha="0"
        app:srcCompat="@drawable/chincha_hungry" />


</RelativeLayout>